--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=test;User Id=sa;Password=Abc123456;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=finance;User Id=sa;Password=Abc123456;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "https://localhost:5222",
+    "Audience": "https://localhost:5222",
+    "SigningKey": "aB92$fjwlX93@cjN0!LkaZPq3O8rFlY@xqM#1vG93KsPQ^xZ1rwzS#eK72%Jl&pi"
+  }
 }
